Fix mobile nav width on Safari

--- a/dev/styles/partials/_header.scss
+++ b/dev/styles/partials/_header.scss
@@ -109,6 +109,7 @@ header {
         text-align: center;
         position: absolute;
         top: 0;
+        left: 0;
         z-index: 10;
         transform-origin: left top;
         transform: rotate(-90deg);
